syntax = "proto3";

package iam;

service AuthService {
  rpc signUp (SignUpDto) returns (User) {}
  rpc signIn (SignInDto) returns (AuthenticatedUser) {}
  rpc validateToken (TokenDto) returns (TokenValidationStatus) {}
}

message TokenDto {
  string token = 1;
}

message TokenValidationStatus {
  bool isValid = 1;
  optional TokenInfo info = 2;
}

message TokenInfo {
  string sub = 1;
  string role = 2;
  int64 iat = 3;
  int64 exp = 4;
  string aud = 5;
  string iss = 6;
  string username = 7;
}

message SignUpDto {
  string username = 1;
  string password = 2;
}

message SignInDto {
  string username = 1;
  string password = 2;
}

service UsersService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc FindAllUsers (Empty) returns (Users) {}
  rpc FindOneUser (FindOneUserDto) returns (User) {}
  rpc UpdateUser (UpdateUserDto) returns (User) {}
  rpc RemoveUser (FindOneUserDto) returns (User) {}
}

message UpdateUserDto {
  string username = 1;
  optional string password = 2;
  optional string role = 3;
}

message FindOneUserDto {
  string username = 1;
}

message CreateUserDto {
  string username = 1;
  string password = 2;
}

message User {
  string id = 1;
  string username = 2;
  string role = 3;
}

message AuthenticatedUser {
  string token = 1;
  string userId = 2;
}

message Users {
  repeated User users = 1;
}

message Empty {}